--- a/package.json
+++ b/package.json
@@ -34,7 +34,11 @@
     "sanitizer": "^0.1.3",
     "url": "^0.11.0",
     "uuid": "^9.0.0",
-    "xml-js": "^1.6.11"
+    "xml-js": "^1.6.11",
+    "@tensorflow/tfjs": "^4.10.0",
+    "@tensorflow/tfjs-node": "^4.10.0",
+    "image-ssim": "^0.2.0",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
