--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "author": "yesinfosolutions",
   "license": "ISC",
   "dependencies": {
+    "@tensorflow/tfjs": "^4.10.0",
+    "@tensorflow/tfjs-node": "^4.10.0",
     "axios": "^1.4.0",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.6",
@@ -20,25 +22,25 @@
     "dotenv": "^8.2.0",
     "ejs": "^3.0.1",
     "express": "^4.17.1",
+    "form-data": "^4.0.0",
     "helmet": "^5.1.0",
     "https": "^1.0.0",
+    "image-ssim": "^0.2.0",
     "json2xls": "^0.1.2",
     "jsonschema": "^1.4.0",
     "jsonwebtoken": "^8.5.1",
     "md5": "^2.3.0",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.4.14",
     "pdfkit": "^0.13.0",
     "pg": "^8.7.1",
     "razorpay": "^2.8.6",
     "request": "^2.88.2",
     "sanitizer": "^0.1.3",
+    "ssim": "^0.0.0",
     "url": "^0.11.0",
     "uuid": "^9.0.0",
-    "xml-js": "^1.6.11",
-    "@tensorflow/tfjs": "^4.10.0",
-    "@tensorflow/tfjs-node": "^4.10.0",
-    "image-ssim": "^0.2.0",
-    "multer": "^1.4.5-lts.1"
+    "xml-js": "^1.6.11"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
